Fixed image align inside page content

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -81,6 +81,11 @@ main {
             a {
                 text-decoration: underline;
             }
+
+            img {
+                display: block;
+                margin: 0 auto;
+            }
         }
         
         .post-extra {
